# fitting_3dpoints_on_one_plane_into_a_line

./: CMakeLists.txt  README.md  input extract indices.txt  io.cpp  io.h  iterative_ransac.cpp  testfile1.txt  testfile2.txt  testfile2dPLSF.txt  testfile2dVLSF.txt  testfile3.txt  testfile4.txt  visualize.cpp  visualize.h
